--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
             "extensionName": ".css",
             "savePath": "/public/css"
         }
-    ]
+    ],
+    "liveServer.settings.port": 5501
 }
